--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <h1>
-      <img src="img/logo.webp" id="logo" alt="Logo" width="60" height="40" loading="lazy" />
+      <img src="logo.webp" id="logo" alt="Logo" width="60" height="40" loading="lazy" />
       <span id="logo-titulo">Tabela Periódica da Segurança da Informação</span>
     </h1>
     <p>Esta tabela interativa foi desenvolvida para tornar o aprendizado da Segurança da Informação mais acessível, visual e intuitivo.
